--- a/openweather-ios/UseCases/Forecast5/View/Forecast5ViewController.xib
+++ b/openweather-ios/UseCases/Forecast5/View/Forecast5ViewController.xib
@@ -10,6 +10,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Forecast5ViewController" customModule="openweather_ios" customModuleProvider="target">
             <connections>
                 <outlet property="sourcesSegmetedConrol" destination="4Ra-yH-S0m" id="UiP-4c-q07"/>
+                <outlet property="tableView" destination="7n1-4Z-F34" id="IQ3-n2-yJM"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="4Ra-yH-S0m">
-                    <rect key="frame" x="0.0" y="44" width="414" height="32"/>
+                    <rect key="frame" x="4" y="48" width="406" height="32"/>
                     <segments>
                         <segment title="First"/>
                         <segment title="Second"/>
@@ -28,12 +29,19 @@
                         <action selector="sourceIndexDidChange:" destination="-1" eventType="valueChanged" id="ata-Je-wn5"/>
                     </connections>
                 </segmentedControl>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7n1-4Z-F34">
+                    <rect key="frame" x="0.0" y="83" width="414" height="779"/>
+                </tableView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="4Ra-yH-S0m" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="CmB-Ud-jxS"/>
-                <constraint firstItem="4Ra-yH-S0m" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="VXx-lQ-KK2"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="4Ra-yH-S0m" secondAttribute="trailing" id="czE-3K-wPU"/>
+                <constraint firstItem="7n1-4Z-F34" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="7Lr-8q-D0o"/>
+                <constraint firstItem="4Ra-yH-S0m" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="4" id="CmB-Ud-jxS"/>
+                <constraint firstItem="4Ra-yH-S0m" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="4" id="VXx-lQ-KK2"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7n1-4Z-F34" secondAttribute="trailing" id="ZL5-Tp-bcJ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="4Ra-yH-S0m" secondAttribute="trailing" constant="4" id="czE-3K-wPU"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="7n1-4Z-F34" secondAttribute="bottom" id="siD-jP-3R6"/>
+                <constraint firstItem="7n1-4Z-F34" firstAttribute="top" secondItem="4Ra-yH-S0m" secondAttribute="bottom" constant="4" id="uVA-hz-kBW"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="132" y="135"/>
