--- a/openweather-ios/UseCases/Forecast5/View/Cells/ForecastCell/ForecastCell.xib
+++ b/openweather-ios/UseCases/Forecast5/View/Cells/ForecastCell/ForecastCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,27 +11,27 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="92" id="KGk-i7-Jjw" customClass="ForecastCell" customModule="openweather_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="66"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+                <rect key="frame" x="0.0" y="0.0" width="300" height="66"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99:99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fs2-L4-ZBM">
-                        <rect key="frame" x="16" y="22.5" width="148" height="21"/>
+                        <rect key="frame" x="16" y="22.5" width="128" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rXd-h1-054">
-                        <rect key="frame" x="180" y="8" width="50" height="50"/>
+                        <rect key="frame" x="160" y="8" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="JEm-zP-pgG"/>
                             <constraint firstAttribute="height" constant="50" id="LEm-FN-Z3T"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- 999°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jre-n0-lOX">
-                        <rect key="frame" x="253" y="22.5" width="51" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="- 999°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jre-n0-lOX">
+                        <rect key="frame" x="233" y="22.5" width="51" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -43,9 +44,9 @@
                     <constraint firstItem="Fs2-L4-ZBM" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Bz0-rw-TfB"/>
                     <constraint firstItem="Fs2-L4-ZBM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="EON-QF-0KY"/>
                     <constraint firstItem="jre-n0-lOX" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="PJ4-ns-mjn"/>
+                    <constraint firstItem="rXd-h1-054" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="eDb-yF-Bfa"/>
+                    <constraint firstAttribute="bottom" secondItem="rXd-h1-054" secondAttribute="bottom" constant="8" id="fId-wK-xnM"/>
                     <constraint firstAttribute="trailing" secondItem="jre-n0-lOX" secondAttribute="trailing" constant="16" id="nau-zu-ak6"/>
-                    <constraint firstAttribute="bottom" secondItem="rXd-h1-054" secondAttribute="bottom" constant="8" id="xhG-iz-8oN"/>
-                    <constraint firstItem="rXd-h1-054" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="zJc-v4-8wi"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -54,7 +55,7 @@
                 <outlet property="timeLabel" destination="Fs2-L4-ZBM" id="aiN-oy-f8q"/>
                 <outlet property="weatherIconImageView" destination="rXd-h1-054" id="Twp-5B-0WH"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="164.73214285714286"/>
+            <point key="canvasLocation" x="115.94202898550725" y="164.73214285714286"/>
         </tableViewCell>
     </objects>
 </document>
