--- a/openweather-ios/UseCases/GridModule/Cell/WeatherCell.xib
+++ b/openweather-ios/UseCases/GridModule/Cell/WeatherCell.xib
@@ -17,25 +17,35 @@
                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTv-RM-HP0">
-                        <rect key="frame" x="29" y="39.5" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="woU-lF-IKm">
+                        <rect key="frame" x="15" y="4" width="70" height="70"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="woU-lF-IKm" secondAttribute="height" multiplier="1:1" id="R07-XX-TX4"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="253" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTv-RM-HP0">
+                        <rect key="frame" x="30.5" y="78" width="39" height="18"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" red="0.5539447623" green="0.82776738559999996" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="fTv-RM-HP0" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="5cp-MO-etE"/>
-                <constraint firstItem="fTv-RM-HP0" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="jUd-Vw-4Rp"/>
+                <constraint firstAttribute="bottom" secondItem="fTv-RM-HP0" secondAttribute="bottom" constant="4" id="1Ma-YH-oof"/>
+                <constraint firstItem="fTv-RM-HP0" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="DQN-8P-naV"/>
+                <constraint firstItem="woU-lF-IKm" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="H91-tV-W90"/>
+                <constraint firstItem="woU-lF-IKm" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="WNx-2Z-8HG"/>
+                <constraint firstItem="fTv-RM-HP0" firstAttribute="top" secondItem="woU-lF-IKm" secondAttribute="bottom" constant="4" id="pGu-cI-42l"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="103" height="82"/>
             <connections>
-                <outlet property="dateLabel" destination="fTv-RM-HP0" id="f9q-UX-9ym"/>
+                <outlet property="temperatureLabel" destination="fTv-RM-HP0" id="yMr-gv-8i9"/>
+                <outlet property="weatherIconImageView" destination="woU-lF-IKm" id="nY8-kc-zMu"/>
             </connections>
-            <point key="canvasLocation" x="170.28985507246378" y="156.69642857142856"/>
+            <point key="canvasLocation" x="169.56521739130437" y="156.69642857142856"/>
         </collectionViewCell>
     </objects>
 </document>
