--- a/openweather-ios/UseCases/GridModule/Cell/WeatherCell.xib
+++ b/openweather-ios/UseCases/GridModule/Cell/WeatherCell.xib
@@ -4,48 +4,57 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="WeatherCell" customModule="openweather_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-            <autoresizingMask key="autoresizingMask"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="woU-lF-IKm">
-                        <rect key="frame" x="15" y="4" width="70" height="70"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="253" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" text="Feb23 16:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSV-Qf-3cs">
+                        <rect key="frame" x="4" y="4" width="196" height="10"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="200" verticalHuggingPriority="200" horizontalCompressionResistancePriority="700" verticalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="woU-lF-IKm">
+                        <rect key="frame" x="19" y="18" width="162" height="162"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="woU-lF-IKm" secondAttribute="height" multiplier="1:1" id="R07-XX-TX4"/>
+                            <constraint firstAttribute="width" secondItem="woU-lF-IKm" secondAttribute="height" id="2Vs-Sc-sBc"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="253" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTv-RM-HP0">
-                        <rect key="frame" x="30.5" y="78" width="39" height="18"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fTv-RM-HP0">
+                        <rect key="frame" x="4" y="184" width="192" height="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" white="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="fTv-RM-HP0" secondAttribute="bottom" constant="4" id="1Ma-YH-oof"/>
-                <constraint firstItem="fTv-RM-HP0" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="DQN-8P-naV"/>
-                <constraint firstItem="woU-lF-IKm" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="H91-tV-W90"/>
-                <constraint firstItem="woU-lF-IKm" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="WNx-2Z-8HG"/>
-                <constraint firstItem="fTv-RM-HP0" firstAttribute="top" secondItem="woU-lF-IKm" secondAttribute="bottom" constant="4" id="pGu-cI-42l"/>
+                <constraint firstItem="TSV-Qf-3cs" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="4L9-Ed-LNX"/>
+                <constraint firstItem="woU-lF-IKm" firstAttribute="top" secondItem="TSV-Qf-3cs" secondAttribute="bottom" constant="4" id="5rA-f0-GTE"/>
+                <constraint firstItem="fTv-RM-HP0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="7s8-bk-a7P"/>
+                <constraint firstAttribute="bottom" secondItem="fTv-RM-HP0" secondAttribute="bottom" constant="4" id="Dog-zF-AZH"/>
+                <constraint firstItem="TSV-Qf-3cs" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="V2R-n9-lyK"/>
+                <constraint firstItem="fTv-RM-HP0" firstAttribute="top" secondItem="woU-lF-IKm" secondAttribute="bottom" constant="4" id="Vyh-rh-wgI"/>
+                <constraint firstItem="woU-lF-IKm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="WlN-J5-yXf"/>
+                <constraint firstAttribute="trailing" secondItem="TSV-Qf-3cs" secondAttribute="trailing" id="eWU-6K-8c1"/>
+                <constraint firstItem="woU-lF-IKm" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="k4v-Qw-LZ1"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="woU-lF-IKm" secondAttribute="trailing" constant="4" id="vMN-Ef-uY3"/>
+                <constraint firstAttribute="trailing" secondItem="fTv-RM-HP0" secondAttribute="trailing" constant="4" id="xQ7-xN-jY1"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="103" height="82"/>
+            <size key="customSize" width="103" height="127"/>
             <connections>
                 <outlet property="temperatureLabel" destination="fTv-RM-HP0" id="yMr-gv-8i9"/>
                 <outlet property="weatherIconImageView" destination="woU-lF-IKm" id="nY8-kc-zMu"/>
             </connections>
-            <point key="canvasLocation" x="169.56521739130437" y="156.69642857142856"/>
+            <point key="canvasLocation" x="169.56521739130437" y="171.42857142857142"/>
         </collectionViewCell>
     </objects>
 </document>
