--- a/openweather-ios/UseCases/GridModule/Cell/WeatherCell.xib
+++ b/openweather-ios/UseCases/GridModule/Cell/WeatherCell.xib
@@ -23,14 +23,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="200" verticalHuggingPriority="200" horizontalCompressionResistancePriority="700" verticalCompressionResistancePriority="700" translatesAutoresizingMaskIntoConstraints="NO" id="woU-lF-IKm">
-                        <rect key="frame" x="19" y="18" width="162" height="162"/>
+                        <rect key="frame" x="21.5" y="18" width="157" height="157"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="woU-lF-IKm" secondAttribute="height" id="2Vs-Sc-sBc"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fTv-RM-HP0">
-                        <rect key="frame" x="4" y="184" width="192" height="12"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <rect key="frame" x="4" y="179" width="192" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -51,6 +51,7 @@
             </constraints>
             <size key="customSize" width="103" height="127"/>
             <connections>
+                <outlet property="dateLabel" destination="TSV-Qf-3cs" id="nwc-vz-JpX"/>
                 <outlet property="temperatureLabel" destination="fTv-RM-HP0" id="yMr-gv-8i9"/>
                 <outlet property="weatherIconImageView" destination="woU-lF-IKm" id="nY8-kc-zMu"/>
             </connections>
