--- a/openweather-ios/UseCases/ListModule/ViewController/ListViewController.xib
+++ b/openweather-ios/UseCases/ListModule/ViewController/ListViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Forecast5ViewController" customModule="openweather_ios" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListViewController" customModule="openweather_ios" customModuleProvider="target">
             <connections>
                 <outlet property="sourcesSegmetedConrol" destination="4Ra-yH-S0m" id="UiP-4c-q07"/>
                 <outlet property="tableView" destination="7n1-4Z-F34" id="IQ3-n2-yJM"/>
